# etl

./: DIM_TEST_CONTRACT_AECB_I (1).dsx  INERACTIVE_TEST_HEADER_DATA 1.dsx  INERACTIVE_TEST_HEADER_DATA 1.json  INERACTIVE_TEST_HEADER_DATA 1_ir.json  INERACTIVE_TEST_HEADER_DATA 1_talend_ir.json  J_DEMO_001_ProperFormat.dsx  Migrated_XML_Pivot.item  STAGE_2_COMPLETION_SUMMARY.md  STAGE_2_DOCUMENTATION.md  STAGE_2_QUICK_REFERENCE.md  TEST_PRESENTMENT (2).dsx  __init__.py  _temp_output_method.txt  asg.json  asg.py  asg1.json  datastage_sample 2.dsx  db.py  debug_conn.txt  debug_failure.txt  debug_generated_item.xml  debug_output.txt  debug_pass.txt  dsx.txt.txt  example_usage.py  exceptions.py  execution_log.txt  execution_log_utf8.txt  grammar.py  ibm_simple_job.dsx  inputfile.csv  main.py  models.py  new_ir.json  new_ir1.json  new_ir2.json  output_asg.json  output_asg_enhanced_v4-1.json  output_asg_enhanced_v4.json  output_asg_v3.json  (+35 more)
Fullnamefilter 1 (2)/TEST/: talend.project
componentTemplates/: tFileInputDelimited.xmlt  tFileOutputDelimited.xmlt
generated_jobs/: .project
generated_jobs_new/NewMigratedProject/: talend.project
generated_jobs_test/MigratedProject/: talend.project
generated_jobs_test1/MigratedProject/: talend.project
new_generated_jobs_new/NewMigratedProjectNew/: talend.project
populated_talend_files/: CustomerETL_0.1.item  CustomerETL_0.1.properties  talend.project
schemas/: models.py
simple_user_job/simple_user_job/: talend.project
templates/: talend.project.xmlt  talend_job.item.xmlt  talend_job.properties.xmlt
(+22 files in other folders)
